Updated interface with contract status

--- a/interface/index.html
+++ b/interface/index.html
@@ -13,7 +13,7 @@
     <label for="input">Input:</label>
     <input type="text" id="input" />
     <div>
-      <button id="check-btn" disabled="true" autocomplete="off">Check</button>
+      <button id="contractstatus-btn" disabled="true" autocomplete="off">Update Contract Status</button>
       <button id="deposit-btn" disabled="true" autocomplete="off">Deposit</button>
       <button id="initiate-btn" disabled="true" autocomplete="off">Signal Withdrawal</button>
       <button id="withdraw-btn" disabled="true" autocomplete="off">Withdraw</button>
@@ -23,9 +23,11 @@
       <button id="pause-btn" hidden="true" autocomplete="off">Pause Deposits</button>
       <button id="unpause-btn" hidden="true" autocomplete="off">Unpause Deposits</button>
       <button id="adminwithdraw-btn" hidden="true" autocomplete="off">Admin Withdraw</button>
-      <button id="contractstatus-btn" disabled="true" autocomplete="off">Contract Status</button>
+
+      <button id="check-btn" hidden = true autocomplete="off">Check Account</button>
     </div>
     <p id="output"></p>
+    <p id="status"></p>
     <script src="./index.js" type="module"></script>
     <script type="module">
         import {ethers} from './ethers.esm.js';
